[css] updated to fix overflow on concepts photo page

--- a/style.css
+++ b/style.css
@@ -115,6 +115,16 @@ a {
   }
 }
 
+/* For photo pages with a lot of subpages */
+@media screen and (max-width: 1100px) {
+  /* .container {
+    height:100%;
+  } */
+  .many {
+    display: block;
+  }
+}
+
 /* ------------------------------------------------------------------------------
 	HOME
 -------------------------------------------------------------------------------*/
